Ideas para el footer

--- a/Jose/Rutherford/mejor/index.html
+++ b/Jose/Rutherford/mejor/index.html
@@ -6,14 +6,26 @@
 		<link rel="stylesheet" href="./style.css" type="text/css" media="all" />
     </head>
 	<body>
-	<nav>
-		<ul>
-			<li><div class="overfloww"><center><img src="./logo.png"></center></div></li>
-			<li><center><a href="">Main</a></li>
-			<li><center><a href="">About</a></center></li>
-			<li><center><a href="">Work</a></center></li>
-			<li><center><a href="">Contact</a></center></li>
-		</ul>
-	</nav>
+		<div id="wrapper">
+			<div id="header">
+				<nav>
+					<ul>
+						<li><center><img src="./logo2.png"></center></li>
+						<li><center><a href="./rutherford.html">Rutherford</a></li>
+						<li><center><a href="./modelo.html">Modelo</a></center></li>
+						<li><center><a href="./experimento.html">Experimento</a></center></li>
+						<li><center><a href="./recursos.html">Recursos</a></center></li>
+					</ul>
+				</nav>
+			</div>
+			<div id="content">
+				<img src="./gra.jpg">
+				<p>Inicio</p>
+			</div>
+			<div id="footer">
+				<center><h4 id="blanco">Diseño y contenidos</h4>
+				<p id="blanco">Carlos Manrique • Jose Manuel • Saúl Verdeja</p></center>
+			</div>
+		</div>
 	</body>
 </html>
