--- a/Jose/Ejercicios-12 HTML, CSS y JavaScript/Clase 5 Sistema de votación/index.html
+++ b/Jose/Ejercicios-12 HTML, CSS y JavaScript/Clase 5 Sistema de votación/index.html
@@ -5,19 +5,22 @@
 		<title>Elecciones 2015</title>
 		<link rel="stylesheet" href="./style.css" type="text/css" media="all" />
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.win.js"></script>
+		<script>
+			$(document).ready(function(){
+				$("#btn1").click(function(){
+					$("#box1").animate({width: 100%});
+				});
+				$("#btn2").click(function(){
+					$("#box1").animate({width: 100px});
+				});
+			});				
+		</script>
 	</head>
-	<script>
-		$(document).ready(function(){
-			$("#btn1").click(function(){
-				$("#box1").animate({width: 100%});
-			});
-			$("#btn2").click(function(){
-				$("#box1").animate({width: 100px});
-			});
-		});				
-	</script>
 	<body>
 		<button id="btn1" class="btn">Vota 1</button>
 		<button id="btn2" class="btn">Vota 2</button>
-		
+		<div id="box1" class="box1">
+			<div id="box2" class="box2">
+			</div>
+		</div>
 	</body>
