--- a/Jose/Ejercicios-12 HTML, CSS y JavaScript/Clase 6 Web por modulos/index.html
+++ b/Jose/Ejercicios-12 HTML, CSS y JavaScript/Clase 6 Web por modulos/index.html
@@ -5,12 +5,20 @@
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<link rel="stylesheet" href="./style.css" type="text/css" media="all" />
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 	</head>
 	<body>
-		<div id="new-header">
+		<div style="width: 100%" id="new-header">
 			<script>
 				$("#new-header").load("header.html");
 			</script>
+		</div>
+		<div class="top2">
+			<div id="new-encuesta">
+				<script>
+					$("#new-encuesta").load("encuesta.html");
+				</script>
+			</div>
 		</div>
 		<div id="new-footer">
 			<script>
